@@ -2,6 +2,8 @@
 
 = Fix bug with Optimal Scorecard rendering
 = Fix bug with the number of games in "First To" matches
+= Fix bug with layout of player selectors
+= Fix bug trying to launch a custom match of Dartzee
 
 --------- v4.1.0 ---------
 
